# clawworker-enterprise

./: .gitignore  PROVIDE_ME.md  README.md  client_supervisor.py  pyproject.toml  supervisor.py
client/: __init__.py  excel_output.py  host_scan.py  host_trust.py  keystore.py  llm_client.py  local_storage.py  main.py  permissions.py  skill_workflow.py  skills_loader.py
docs/: architecture.md  commercial-readiness.md  eval_cases.md  llm_system_prompt.md  optimization-loop.md  optimization-prompts.md  release-notes-beta.md  revocation-model.md  test_plan.md
host/: __init__.py  admin_auth.py  admin_ui.py  cert_manager.py  client_records.py  dispatcher.py  llm_configs.py  llm_proxy.py  login_throttle.py  notices.py  secret_store.py  server.py  service_manager.py  tls_cert.py  user_manager.py
shared/: __init__.py  contract.py  prompts.py
tests/: conftest.py  test_audit_chain.py  test_chart_render.py  test_codegen_cache.py  test_codegen_hardening.py  test_contract.py  test_csrf_guard.py  test_dual_file_output.py  test_excel.py  test_host.py  test_host_scan.py  test_integration_real.py  test_intent_routing.py  test_lazy_detect.py  test_login_throttle.py  test_permissions.py  test_real_backend_calibers.py  test_redteam_guardrails.py  test_revocation_freshness.py  test_sched_circuit_breaker.py  test_sched_decrypt.py  test_sched_features.py  test_sched_miss.py  test_service_manager.py  test_skill_filter.py  test_source_total_rows.py  test_spki_pinning.py  test_supervisor_role_adoption.py  test_tls_trust.py  test_tools.py  test_web_search.py  test_workflow.py
(+565 files in other folders)
