[project]
name = "agent-system"
version = "0.1.0"
description = "Multi-user encrypted-data analytics agent — LangGraph-based MVP"
requires-python = ">=3.11"
authors = [{ name = "agent-system" }]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]
host = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.scripts]
agent-client = "client.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["client*", "host*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
